@@ -150,7 +150,7 @@ cmake -D CONTRIB_CUSTOM_DIR:PATH="~/openms-development/contrib_build" "~/openms-
       <td>Defines the Qt 'qmake' application. The corresponding Qt installation is used.</td>
     </tr>
     <tr>
-      <td valign="top">OPENMS_BUILD_TYPE</td>
+      <td valign="top">CMAKE_BUILD_TYPE</td>
       <td>Should be either 'Release' (optimization enabled) or 'Debug' (debug info and 
           precondition/postcondiction checks enabled).
           @n The default is 'Release'.</td>
